2010-12-27  Seth Jackson  <sethj@users.sourceforge.net>

	* include/basetsd.h: (INT8, UINT8, INT16, UINT16): Define.

2010-12-27  Paul Sokolovsky  <pfalcon@users.sf.net>

	* include/bdatypes.h: Add missing semicolons.

2010-08-26  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	* include/w32api.h: Increment version to 3.15.
	* Makefile.in: Ditto.

2010-08-26  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* Makefile.in: Update naming convention and compression format (lzma),
	leaving existing naming convention and compression format as is for Cygwin.

2010-08-25  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/oleacc.h (STATE_SYSTEM_HASPOPUP, STATE_SYSTEM_NORMAL,
	STATE_SYSTEM_PROTECTED): Define.

	Thank you to Marcus von Appen for reporting the issue.

2010-08-25  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/winuser.h (CF_DIBV5): Define.
	(CF_MAX): Adjust accordingly.

	Thank you to Lenard Lindstrom for reporting the issue.

2010-08-25  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/sspi.h (QuerySecurityContextToken): Define.
	* lib/secur32.def: Regenerate using gendef on a Win7 machine.

	Thank you to Magnus Hagander for reporting the issue.

2010-08-25  Ali Sabil  <asabil@users.sourceforge.net>

	* include/ocidl.h: Define COBJMACROS for IPropertyBag and IPropertyBag2.

2010-08-25  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/shlwapi (ASSOCDATA): Update definition.

	Thank you to Frederic Deschamps for reporting the issue.

2010-08-25  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/winbase.h (COPY_FILE_OPEN_SOURCE_FOR_WRITE,
	COPY_FILE_ALLOW_DECRYPTED_DESTINATION, COPY_FILE_COPY_SYMLINK,
	COPY_FILE_NO_BUFFERING): Define.

	Thank you to Roland Schwingel for reporting the issue.

2010-08-25  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/winuser.h (HHOOK): Move definition from here...
	* include/windef.h: ...to here, as per MSDN.
