@@ -627,7 +627,7 @@ DECLARE_INTERFACE_(ITypeLib,IUnknown)
 	STDMETHOD(GetTypeInfoType)(THIS_ UINT,TYPEKIND*) PURE;
 	STDMETHOD(GetTypeInfoOfGuid)(THIS_ REFGUID,ITypeInfo**) PURE;
 	STDMETHOD(GetLibAttr)(THIS_ TLIBATTR**) PURE;
-	STDMETHOD(GetTypeComp)(THIS_ ITypeComp*) PURE;
+	STDMETHOD(GetTypeComp)(THIS_ ITypeComp**) PURE;
 	STDMETHOD(GetDocumentation)(THIS_ INT,BSTR*,BSTR*,DWORD*,BSTR*) PURE;
 	STDMETHOD(IsName)(THIS_ LPOLESTR,ULONG,BOOL*) PURE;
 	STDMETHOD(FindName)(THIS_ LPOLESTR,ULONG,ITypeInfo**,MEMBERID*,USHORT*) PURE;
@@ -646,7 +646,7 @@ DECLARE_INTERFACE_(ITypeLib2,ITypeLib)
 	STDMETHOD(GetTypeInfoType)(THIS_ UINT,TYPEKIND*) PURE;
 	STDMETHOD(GetTypeInfoOfGuid)(THIS_ REFGUID,ITypeInfo**) PURE;
 	STDMETHOD(GetLibAttr)(THIS_ TLIBATTR**) PURE;
-	STDMETHOD(GetTypeComp)(THIS_ ITypeComp*) PURE;
+	STDMETHOD(GetTypeComp)(THIS_ ITypeComp**) PURE;
 	STDMETHOD(GetDocumentation)(THIS_ INT,BSTR*,BSTR*,DWORD*,BSTR*) PURE;
 	STDMETHOD(IsName)(THIS_ LPOLESTR,ULONG,BOOL*) PURE;
 	STDMETHOD(FindName)(THIS_ LPOLESTR,ULONG,ITypeInfo**,MEMBERID*,USHORT*) PURE;
@@ -729,7 +729,7 @@ DECLARE_INTERFACE_(IRecordInfo, IUnknown)
 	STDMETHOD(PutField )(THIS_ ULONG,PVOID,LPCOLESTR, VARIANT*) PURE;
 	STDMETHOD(PutFieldNoCopy)(THIS_ ULONG,PVOID,LPCOLESTR,VARIANT*) PURE;
 	STDMETHOD(GetFieldNames)(THIS_ ULONG*,BSTR*) PURE;
-	STDMETHOD_(BOOL,IsMatchingType)(THIS_ THIS) PURE;
+	STDMETHOD_(BOOL,IsMatchingType)(THIS_ IRecordInfo*) PURE;
 	STDMETHOD_(PVOID,RecordCreate)(THIS) PURE;
 	STDMETHOD(RecordCreateCopy)(THIS_ PVOID,PVOID*) PURE;
 	STDMETHOD(RecordDestroy )(THIS_ PVOID) PURE;
