@@ -880,8 +880,8 @@ DECLARE_INTERFACE_(IExternalConnection,IUnknown)
 	STDMETHOD(QueryInterface)(THIS_ REFIID,PVOID*) PURE;
 	STDMETHOD_(ULONG,AddRef)(THIS) PURE;
 	STDMETHOD_(ULONG,Release)(THIS) PURE;
-	STDMETHOD(AddConnection)(THIS_ DWORD,DWORD) PURE;
-	STDMETHOD(ReleaseConnection)(THIS_ DWORD,DWORD,BOOL) PURE;
+	STDMETHOD_(DWORD,AddConnection)(THIS_ DWORD,DWORD) PURE;
+	STDMETHOD_(DWORD,ReleaseConnection)(THIS_ DWORD,DWORD,BOOL) PURE;
 };
 #undef INTERFACE
 
